Addiing the final code

--- a/Machine_Learning/final_RFR_model.ipynb
+++ b/Machine_Learning/final_RFR_model.ipynb
@@ -1143,16 +1143,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create dictionary with defined  models we will train our dataset.\n",
+    "# Create dictionary with defined models we will train our dataset.\n",
     "all_ml = {\n",
-    "    \"RandomFores_300\": RandomForestRegressor(n_estimators = 300, random_state = 0),\n",
-    "    \"RandomFores_100\": RandomForestRegressor(n_estimators = 50, random_state = 0),\n",
+    "    \"RandomFores_300\": RandomForestRegressor(n_estimators = 100, max_depth = 8, random_state = 0),\n",
+    "    \"RandomFores_50\": RandomForestRegressor(n_estimators = 50, max_depth = 3, random_state = 0),\n",
     "    \"LinearRegression\":LinearRegression(),\n",
-    "\n",
     "}\n",
     "\n",
     "# Create list with future results\n",
@@ -1161,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1178,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1211,14 +1210,14 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>RandomFores_300</td>\n",
-       "      <td>0.932420</td>\n",
-       "      <td>0.526772</td>\n",
+       "      <td>0.919614</td>\n",
+       "      <td>0.559059</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>RandomFores_100</td>\n",
-       "      <td>0.922611</td>\n",
-       "      <td>0.576923</td>\n",
+       "      <td>RandomFores_50</td>\n",
+       "      <td>0.844950</td>\n",
+       "      <td>0.619561</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1232,12 +1231,12 @@
       ],
       "text/plain": [
        "               name  train_score  test_score\n",
-       "0   RandomFores_300     0.932420    0.526772\n",
-       "1   RandomFores_100     0.922611    0.576923\n",
+       "0   RandomFores_300     0.919614    0.559059\n",
+       "1    RandomFores_50     0.844950    0.619561\n",
        "2  LinearRegression     0.724436    0.114240"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
