--- a/Database/database_tables.ipynb
+++ b/Database/database_tables.ipynb
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -482,19 +482,19 @@
     }
    ],
    "source": [
-    "ml_df = ml_df.drop_duplicates()\n",
+    "ml_df = ml_df.drop_duplicates(subset=[\"App Name\"])\n",
     "print(F\"Duplicates: {ml_df.duplicated().sum()}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "App Name            2\n",
+       "App Name            1\n",
        "Category            0\n",
        "Rating              0\n",
        "Rating Count        0\n",
@@ -511,7 +511,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,9 +532,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/c5/zsm3680n3dqbn23rnh5_wyb00000gn/T/ipykernel_27151/2917615570.py:18: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  ml_df[\"Size\"] = ml_df[\"Size\"].apply(value_to_float)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -685,7 +697,7 @@
        "4   6.2       Everyone         False             False           False  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -714,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +735,7 @@
        "dtype('float64')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -734,9 +746,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/c5/zsm3680n3dqbn23rnh5_wyb00000gn/T/ipykernel_27151/3346227670.py:12: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  ml_df[\"Installs\"] = ml_df[\"Installs\"].apply(object_to_int)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -887,7 +911,7 @@
        "4   6.2       Everyone         False             False           False  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -911,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +944,7 @@
        "dtype('int64')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -931,64 +955,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Education                  239777\n",
-       "Music & Audio              154585\n",
-       "Business                   142149\n",
-       "Tools                      141969\n",
-       "Entertainment              137577\n",
-       "Lifestyle                  117764\n",
-       "Books & Reference          116491\n",
-       "Personalization             89012\n",
-       "Health & Fitness            82596\n",
-       "Productivity                78244\n",
-       "Shopping                    74749\n",
-       "Food & Drink                73442\n",
-       "Travel & Local              66664\n",
-       "Finance                     64730\n",
-       "Arcade                      52706\n",
-       "Puzzle                      50269\n",
-       "Casual                      49256\n",
-       "Communication               47541\n",
-       "Sports                      47052\n",
-       "Social                      44044\n",
-       "News & Magazines            42584\n",
-       "Photography                 35386\n",
-       "Medical                     31690\n",
-       "Action                      26827\n",
-       "Maps & Navigation           26348\n",
-       "Adventure                   22787\n",
-       "Simulation                  22724\n",
-       "Educational                 21059\n",
-       "Art & Design                18392\n",
-       "Auto & Vehicles             17951\n",
-       "House & Home                14173\n",
-       "Video Players & Editors     13925\n",
-       "Events                      12675\n",
-       "Beauty                      11699\n",
-       "Trivia                      11689\n",
-       "Board                       10443\n",
-       "Racing                      10178\n",
-       "Role Playing                 9657\n",
-       "Word                         8522\n",
-       "Strategy                     8237\n",
-       "Card                         8046\n",
-       "Weather                      7130\n",
-       "Dating                       6448\n",
-       "Libraries & Demo             5068\n",
-       "Casino                       5035\n",
-       "Music                        4143\n",
-       "Parenting                    3764\n",
-       "Comics                       2821\n",
+       "Education                  226779\n",
+       "Music & Audio              145328\n",
+       "Business                   138881\n",
+       "Tools                      130057\n",
+       "Entertainment              127920\n",
+       "Lifestyle                  111326\n",
+       "Books & Reference          107393\n",
+       "Health & Fitness            78982\n",
+       "Personalization             76817\n",
+       "Productivity                74053\n",
+       "Shopping                    73067\n",
+       "Food & Drink                70718\n",
+       "Travel & Local              65182\n",
+       "Finance                     62229\n",
+       "Arcade                      48248\n",
+       "Communication               45747\n",
+       "Sports                      45728\n",
+       "Puzzle                      45713\n",
+       "Casual                      45530\n",
+       "Social                      41842\n",
+       "News & Magazines            40859\n",
+       "Medical                     30895\n",
+       "Photography                 29833\n",
+       "Action                      25757\n",
+       "Maps & Navigation           25605\n",
+       "Simulation                  22100\n",
+       "Adventure                   21933\n",
+       "Educational                 20008\n",
+       "Auto & Vehicles             17438\n",
+       "Art & Design                16735\n",
+       "House & Home                13434\n",
+       "Video Players & Editors     12588\n",
+       "Events                      12324\n",
+       "Beauty                      11094\n",
+       "Trivia                      11011\n",
+       "Racing                       9797\n",
+       "Role Playing                 9514\n",
+       "Board                        9118\n",
+       "Strategy                     7833\n",
+       "Word                         7832\n",
+       "Card                         6977\n",
+       "Weather                      6699\n",
+       "Dating                       6171\n",
+       "Libraries & Demo             4849\n",
+       "Casino                       4790\n",
+       "Music                        4014\n",
+       "Parenting                    3614\n",
+       "Comics                       2736\n",
        "Name: Category, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1001,42 +1025,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/c5/zsm3680n3dqbn23rnh5_wyb00000gn/T/ipykernel_27151/2255650842.py:6: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  ml_df.Category = ml_df.Category.replace(category,\"Other\")\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "Other                256566\n",
-       "Education            239777\n",
-       "Music & Audio        154585\n",
-       "Business             142149\n",
-       "Tools                141969\n",
-       "Entertainment        137577\n",
-       "Lifestyle            117764\n",
-       "Books & Reference    116491\n",
-       "Personalization       89012\n",
-       "Health & Fitness      82596\n",
-       "Productivity          78244\n",
-       "Shopping              74749\n",
-       "Food & Drink          73442\n",
-       "Travel & Local        66664\n",
-       "Finance               64730\n",
-       "Arcade                52706\n",
-       "Puzzle                50269\n",
-       "Casual                49256\n",
-       "Communication         47541\n",
-       "Sports                47052\n",
-       "Social                44044\n",
-       "News & Magazines      42584\n",
-       "Photography           35386\n",
-       "Medical               31690\n",
-       "Action                26827\n",
-       "Maps & Navigation     26348\n",
+       "Other                242609\n",
+       "Education            226779\n",
+       "Music & Audio        145328\n",
+       "Business             138881\n",
+       "Tools                130057\n",
+       "Entertainment        127920\n",
+       "Lifestyle            111326\n",
+       "Books & Reference    107393\n",
+       "Health & Fitness      78982\n",
+       "Personalization       76817\n",
+       "Productivity          74053\n",
+       "Shopping              73067\n",
+       "Food & Drink          70718\n",
+       "Travel & Local        65182\n",
+       "Finance               62229\n",
+       "Arcade                48248\n",
+       "Communication         45747\n",
+       "Sports                45728\n",
+       "Puzzle                45713\n",
+       "Casual                45530\n",
+       "Social                41842\n",
+       "News & Magazines      40859\n",
+       "Medical               30895\n",
+       "Photography           29833\n",
+       "Action                25757\n",
+       "Maps & Navigation     25605\n",
        "Name: Category, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1056,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1166,7 +1202,7 @@
        "4           0.0  True    0.0       Everyone           False  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
