--- a/Database/database_tables.ipynb
+++ b/Database/database_tables.ipynb
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -488,13 +488,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "App Name            1\n",
+       "App Name            0\n",
        "Category            0\n",
        "Rating              0\n",
        "Rating Count        0\n",
@@ -511,18 +511,21 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "ml_df = ml_df.applymap(lambda x: x.replace('\\'', '') if (isinstance(x, str)) else x)\n",
+    "ml_df = ml_df.applymap(lambda x: x.replace('\"', '') if (isinstance(x, str)) else x)\n",
+    "ml_df.dropna(axis=0, how='any', inplace=True)\n",
     "ml_df.isnull().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,21 +535,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/c5/zsm3680n3dqbn23rnh5_wyb00000gn/T/ipykernel_27151/2917615570.py:18: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  ml_df[\"Size\"] = ml_df[\"Size\"].apply(value_to_float)\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -697,7 +688,7 @@
        "4   6.2       Everyone         False             False           False  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -726,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +726,7 @@
        "dtype('float64')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -746,21 +737,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/c5/zsm3680n3dqbn23rnh5_wyb00000gn/T/ipykernel_27151/3346227670.py:12: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  ml_df[\"Installs\"] = ml_df[\"Installs\"].apply(object_to_int)\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -911,7 +890,7 @@
        "4   6.2       Everyone         False             False           False  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -935,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -944,7 +923,7 @@
        "dtype('int64')"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -955,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -981,7 +960,7 @@
        "Puzzle                      45713\n",
        "Casual                      45530\n",
        "Social                      41842\n",
-       "News & Magazines            40859\n",
+       "News & Magazines            40858\n",
        "Medical                     30895\n",
        "Photography                 29833\n",
        "Action                      25757\n",
@@ -1012,7 +991,7 @@
        "Name: Category, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1025,21 +1004,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/c5/zsm3680n3dqbn23rnh5_wyb00000gn/T/ipykernel_27151/2255650842.py:6: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  ml_df.Category = ml_df.Category.replace(category,\"Other\")\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -1064,7 +1031,7 @@
        "Puzzle                45713\n",
        "Casual                45530\n",
        "Social                41842\n",
-       "News & Magazines      40859\n",
+       "News & Magazines      40858\n",
        "Medical               30895\n",
        "Photography           29833\n",
        "Action                25757\n",
@@ -1072,7 +1039,7 @@
        "Name: Category, dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1092,7 +1059,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ml_df = ml_df[ml_df['App_Name'].map(lambda x: x.isascii())]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1202,7 +1178,7 @@
        "4           0.0  True    0.0       Everyone           False  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1215,118 +1191,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>App_Name</th>\n",
-       "      <th>Installs</th>\n",
-       "      <th>Minimum_Installs</th>\n",
-       "      <th>Maximum_Installs</th>\n",
-       "      <th>Size</th>\n",
-       "      <th>Ad_Supported</th>\n",
-       "      <th>In_App_Purchases</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Gakondo</td>\n",
-       "      <td>10</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>15</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Ampere Battery Info</td>\n",
-       "      <td>5000</td>\n",
-       "      <td>5000.0</td>\n",
-       "      <td>7662</td>\n",
-       "      <td>2.9</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Vibook</td>\n",
-       "      <td>50</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>58</td>\n",
-       "      <td>3.7</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Smart City Trichy Public Service Vehicles 17UC...</td>\n",
-       "      <td>10</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>19</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>GROW.me</td>\n",
-       "      <td>100</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>478</td>\n",
-       "      <td>6.2</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                            App_Name  Installs  \\\n",
-       "0                                            Gakondo        10   \n",
-       "1                                Ampere Battery Info      5000   \n",
-       "2                                             Vibook        50   \n",
-       "3  Smart City Trichy Public Service Vehicles 17UC...        10   \n",
-       "4                                            GROW.me       100   \n",
-       "\n",
-       "   Minimum_Installs  Maximum_Installs  Size  Ad_Supported  In_App_Purchases  \n",
-       "0              10.0                15  10.0         False             False  \n",
-       "1            5000.0              7662   2.9          True             False  \n",
-       "2              50.0                58   3.7         False             False  \n",
-       "3              10.0                19   1.8          True             False  \n",
-       "4             100.0               478   6.2         False             False  "
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "app_installs = ml_df.drop(columns=[\"Category\", \"Rating\", \"Rating_Count\", \"Free\", \"Price\", \"Content_Rating\", \"Editors_Choice\"])\n",
-    "# app_installs.to_csv(\"Resources/app_installs.csv\", index=False)\n",
+    "app_installs.to_csv(\"Resources/app_installs.csv\", index=False)\n",
     "app_installs.head()"
    ]
   },
@@ -1335,7 +1205,92 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Import dependencies to connect to database\n",
+    "import sqlalchemy \n",
+    "from sqlalchemy import create_engine\n",
+    "from sqlalchemy.orm import sessionmaker\n",
+    "from sqlalchemy_utils import database_exists, create_database\n",
+    "from local_settings import postgresql as settings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create function for get engine\n",
+    "def get_engine(user, passwd, host, port, db):\n",
+    "    url = f\"postgresql://{user}:{passwd}@{host}:{port}/{db}\"\n",
+    "    engine = create_engine(url, pool_size=50, echo=False)\n",
+    "    return engine"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create engine\n",
+    "engine = get_engine(settings['pguser'],\n",
+    "                    settings['pgpasswd'],\n",
+    "                    settings['pghost'],\n",
+    "                    settings['pgport'],\n",
+    "                    settings['pgdb'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "engine.url"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to create engine\n",
+    "def get_engine_from_settings():\n",
+    "    keys = ['pguser', 'pgpasswd', 'pghost', 'pgport', 'pgdb']\n",
+    "    if not all(key in keys for key in settings.keys()):\n",
+    "        raise Exception('Bad config file')\n",
+    "\n",
+    "    return get_engine(settings['pguser'],\n",
+    "                    settings['pgpasswd'],\n",
+    "                    settings['pghost'],\n",
+    "                    settings['pgport'],\n",
+    "                    settings['pgdb'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to create session\n",
+    "def get_session():\n",
+    "    engine = get_engine_from_settings()\n",
+    "    session = sessionmaker(bind=engine)()\n",
+    "    return session"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create session\n",
+    "session = get_session()"
+   ]
   }
  ],
  "metadata": {
